Tue Oct 27 23:14:14 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/id.def: enable anonymous IDs not to expose internal IDs for
	  frozen-string-literal-debug by Marshal.dump.

Tue Oct 27 17:06:55 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/id.def: move internal IDs for frozen-string-literal-debug.

Tue Oct 27 16:41:05 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_error_frozen_object): use rb_attr_get instead of
	  rb_ivar_get to get rid of warnings for string objects created
	  when frozen-string-literal-debug is disabled.

Tue Oct 27 16:18:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (Logger::Period#previous_period_end): as weekly
	  rotation shifts the log file on Sundays, the end date of the
	  previous period should be Saturdays.  fix r45072.
	  [ruby-dev:49314] [Bug #11622]

Tue Oct 27 16:12:37 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c (rb_print_backtrace): our addr2line doesn't work on sparc.
	  http://rubyci.s3.amazonaws.com/unstable11s/ruby-trunk/log/20151027T043311Z.log.html.gz

Tue Oct 27 12:00:33 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (Logger::Period#next_rotate_time): get rid of
	  adding to mday not to exceed the days of the month.
	  [ruby-core:71185] [Bug #11620]

Mon Oct 26 22:43:03 2015  yui-knk  <spiketeika@gmail.com>

	* test/ruby/test_module.rb (test_method_defined): Add test cases
	  for `public/protected/private _method_defined?`
	  These methods accept string as argument, so add string argument
	  cases.  [Fix GH-1067]

Mon Oct 26 22:23:30 2015  SimonDKnight  <simondknight@hotmail.com>

	* lib/racc/rdoc/grammar.en.rdoc: Grammatical errors fixed.
	  [Fix GH-1070]

Mon Oct 26 18:36:43 2015  Shota Fukumori (sora_h) <her@sorah.jp>

	* vm_method.c(rb_method_entry_make):
	  [DOC] [ci skip] Remove a needless space from comment
	  [Fixes GH-1069] Patch by @yui-knk

Mon Oct 26 17:30:13 2015  Ryan Hosford  <tad.hosford@gmail.com>
